compiler/test-data/parser/expressions/errors/unclosed_list.frel
module expressions.errors.unclosed_list

backend Bad {
    items : List<i32> = [1, 2, 3
}
